# MusicPlayer

./: .gitignore  CMakeLists.txt  Kconfig.projbuild  README.md  RELEASE_NOTES.md  RELEASE_v1.1.0.md  esp_idf_project_configuration.json  partitions.csv  sdkconfig  sdkconfig.defaults
docs/: music-routes-spec.md  system-config-spec.md
main/: CMakeLists.txt  Kconfig.projbuild  main.c  main.c.bak_before_mp3
main/module/audio/: a2dp_stream.c  a2dp_stream.h  audio_pipeline.c  audio_pipeline.h  ring_buffer.c  ring_buffer.h
main/module/bootstrap/: app_bootstrap.c  app_bootstrap.h  app_facade.c  app_facade.h
main/module/bt/: bt_callbacks.c  bt_callbacks.h  bt_manager.c  bt_manager.h
main/module/common/: app_config.h  app_log.h
main/module/control/: control_queue.c  control_queue.h  player_tasks.c  player_tasks.h  player_utils.c  player_utils.h
main/module/input/: input_manager.c  input_manager.h
main/module/playback/: media_library.c  media_library.h  playback_engine.c  playback_engine.h
main/module/power/: power_manager.c  power_manager.h  sleep_manager.c  sleep_manager.h
main/module/storage/: sdcard_manager.c  sdcard_manager.h
main/module/system/: app_mode.c  app_mode.h  system_config_manager.c  system_config_manager.h
main/module/wifi/: wifi_ap_manager.c  wifi_ap_manager.h
main/web/: index.html
testes/: script.js  scripy.py
